--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -30,7 +30,7 @@
         <nav>
             {% if not user.is_authenticated %}
             <p id="auth-state">You are not signed in.</p>
-            <a class="highlighted" href="./sign_in">Sign in</a> |
+            <a class="highlighted" href="./sign_in">Sign in</a>
             <a href="./sign_up">Sign up</a>
             {% else %}
             <p id="auth-state">You are signed in as <span>{{ user.username }}</span>.</p>
