--- a/client/static/general.css
+++ b/client/static/general.css
@@ -161,20 +161,20 @@ div.tile canvas {
     top: 0px;
 }
 
-/* ========== P O I N T E R ========== */
+/* ========== M A R K E R ========== */
 
-div.pointer {
+div.marker {
 	background-color: #74899d;
 	width: 16px;
 	height: 16px;
 	display: none;
 	position: absolute;
-	z-index: 1;
+	z-index: 2;
 	border-radius: 8px;
 	box-shadow: 0px 0px 12px #aaa;
 }
 
-div.pointer.location {
+div.marker.location {
     background-color: #8ec200;
     box-shadow: 0px 0px 12px #aaa;
 }
