--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -8,13 +8,15 @@
 <link type="text/css" rel="stylesheet" href="{% static 'general.css' %}"/>
 <script src="{% static 'prototype.js' %}"></script>
 <script src="{% static 'jquery-1.10.2.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'main.js' %}"></script>
-<script type="text/javascript" src="{% static 'ajax.js' %}"></script>
 <script type="text/javascript" src="{% static 'utils.js' %}"></script>
+<script type="text/javascript" src="{% static 'ajax.js' %}"></script>
+<script type="text/javascript" src="{% static 'others.js' %}"></script>
 <script type="text/javascript" src="{% static 'map.js' %}"></script>
 <script type="text/javascript" src="{% static 'graph.js' %}"></script>
+<script type="text/javascript" src="{% static 'tasks.js' %}"></script>
 <script type="text/javascript" src="{% static 'coords.js' %}"></script>
 <script type="text/javascript" src="{% static 'geolocation.js' %}"></script>
+<script type="text/javascript" src="{% static 'main.js' %}"></script>
 <script>
     jQuery.noConflict();
 </script>
