--- a/client/templates/map.html
+++ b/client/templates/map.html
@@ -5,7 +5,7 @@
     <script type="text/javascript">
         jQuery(document).on('ready', function() {
             {% if user.is_authenticated %}
-                main.username = '{{ user.username }}';
+                utils.activeUsername = '{{ user.username }}';
             {% endif %}
             setTimeout(map.start.bind(map), 100);
         });
